--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 github.client.id=03721cd4cfe862a86796
 github.client.Secret=3feaf20ca6188e4ddf692ce18ac6f6fbd817e7c1
 github.redirect.uri=http://localhost:8080/callback
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/community
