--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,7 @@ github.redirect.uri=http://localhost:8080/callback
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/community
+spring.datasource.url=jdbc:mysql://localhost:3306/community?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
+#自动_转驼峰命名
 mybatis.configuration.map-underscore-to-camel-case=true
+spring.thymeleaf.cache=false
